--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
 document.addEventListener('click', ()=> console.log('preview clicked'));</textarea>
           </div>
         </div>
+        <script type="text/javascript">
+	atOptions = {
+		'key' : '44b3f6fb48815cbebeae8562e2c226dd',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/44b3f6fb48815cbebeae8562e2c226dd/invoke.js"></script>
 
         <div class="bottom-tools">
           <input type="text" id="saveName" placeholder="Snippet name (for local save)" />
@@ -104,11 +114,21 @@ document.addEventListener('click', ()=> console.log('preview clicked'));</textar
           <div class="list" id="snippetList"></div>
         </div>
       </aside>
+      <script type="text/javascript">
+	atOptions = {
+		'key' : '44b3f6fb48815cbebeae8562e2c226dd',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/44b3f6fb48815cbebeae8562e2c226dd/invoke.js"></script>
     </main>
 
     <footer style="padding:10px 14px;border-top:1px solid rgba(255,255,255,0.02);display:flex;gap:10px;align-items:center">
       <div class="muted">Tips: Use <strong>Ctrl+Enter</strong> to run. Auto-preview will update preview while typing.</div>
-      <div style="margin-left:auto" class="muted">Built with ❤️ — Offline single-file editor</div>
+      <div style="margin-left:auto" class="muted">Built with ❤️ Tools 4U — Offline single-file editor</div>
     </footer>
   </div>
 
@@ -273,3 +293,4 @@ document.addEventListener('click', ()=> console.log('preview clicked'));</textar
   </script>
 </body>
 </html>
+
