--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Online HTML • CSS • JS Compiler</title>
+	<meta name="google-site-verification" content="D8GXs59-e4AfojVucVEspfJExj2MjjHMuioTSivs7qI" />
   <meta name="description" content="Free online HTML, CSS and JavaScript compiler and live editor. Write, run, preview and save snippets in real‑time — no account needed.">
 <meta name="keywords" content="online compiler, html editor, css editor, javascript editor, live preview, coding playground, web sandbox, front end editor, code runner">
 <link rel="canonical" href="https://your-domain.com/online-html-css-js-compiler">
@@ -293,4 +294,5 @@ document.addEventListener('click', ()=> console.log('preview clicked'));</textar
   </script>
 </body>
 </html>
+
 
