--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 <meta property="og:description" content="Instant HTML, CSS & JS code runner with live preview. Save snippets, auto‑preview, export HTML and more.">
 <meta property="og:type" content="website">
 <meta name="robots" content="index, follow">
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DJGNXJ87CL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DJGNXJ87CL');
+</script>
   <style>
     :root{
       --bg:#0f1724; --panel:#0b1220; --muted:#9aa4b2; --accent:#6ee7b7;
@@ -294,5 +303,6 @@ document.addEventListener('click', ()=> console.log('preview clicked'));</textar
   </script>
 </body>
 </html>
+
 
 
